--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_offers">ClosestOfferFinder</string>
     <string name="getWSVersion">getWSVersion</string>
+    <string name="title_activity_offer_description">Offer Description</string>
+    <string name="title_activity_intro">IntroActivity</string>
 
 </resources>
