This update includes a location awareness activity which uses the cellphone's gps to find the longitude and the latitude of the user.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="getWSVersion">getWSVersion</string>
     <string name="title_activity_offer_description">Offer Description</string>
     <string name="title_activity_intro">IntroActivity</string>
+    <string name="title_activity_location_awareness">My Location</string>
 
 </resources>
